--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,6 +2,11 @@ name: Lint
 on:
   pull_request:
 
+permissions:
+  checks: write
+  contents: read
+  pull-requests: write
+
 jobs:
   shellcheck:
     runs-on: ubuntu-latest
