--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -6,7 +6,11 @@ on:
       - main
 
 permissions:
-  contents: read
+  # write permission is required to create a github release
+  contents: write
+  # write permission is required for autolabeler
+  # otherwise, read permission is required at least
+  pull-requests: write
 
 jobs:
   draft_release:
