--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,4 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: make install
-      - run: gh activity-report --author srz-zumix -d 7..3
+      - run: gh activity-report -d 7..3 -f comment > a.txt
+      - run: gh activity-report --author srz-zumix -d 7..3 -f comment > b.txt
+      - run: gh activity-report --author @me --author srz-zumix -d 7..3 -f comment > c.txt
+      - name: Test Diff
+        run: |
+            diff a.txt b.txt
+            diff a.txt c.txt
