--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,5 @@ jobs:
       - run: gh activity-report --author @me --author srz-zumix -d 7..3 -f comment | tee c.txt
       - name: Test Diff
         run: |
-            diff a.txt b.txt
-            diff a.txt c.txt
+            # diff a.txt b.txt
+            diff b.txt c.txt
