--- a/format/prs/markdown.template
+++ b/format/prs/markdown.template
@@ -1,14 +1,12 @@
-| TITLE | KIND | STATE | UPDATE | LINK |
-|:------|:-----|:------|:-------|:-----|
+| TITLE | STATE | UPDATE | LINK |
+|:------|:-----|:------|:-------|
 {{ range $index, $element := . -}}
-{{- $kind := "pr" -}}
-| {{ $element.title }}| {{ $kind }}| {{ $element.state }}| {{ $element.updatedAt }}| [{{ $element.repository.nameWithOwner }}#{{ $element.number }}]({{ $element.url }}) |
+| {{ $element.title }}| {{ $element.state }}| {{ $element.updatedAt }}| [{{ $element.repository.nameWithOwner }}#{{ $element.number }}]({{ $element.url }}) |
 {{ end }}
 {{- /* I want a tablerow that does not truncate
-{{- tablerow "| TITLE" "| KIND" "| STATE" "| UPDATE" "| LINK" "|" -}}
-{{- tablerow "|:-----" "|:-----" "|:-----" "|:-----" "|:-----" "|" -}}
+{{- tablerow "| TITLE" "| STATE" "| UPDATE" "| LINK" "|" -}}
+{{- tablerow "|:-----" "|:-----" "|:-----" "|:-----" "|" -}}
 {{- range $index, $element := . -}}
-{{- $kind := "pr" -}}
-{{- tablerow (printf "| %s" $element.title) (printf "| %s" $kind) (printf "| %s" $element.state) (printf "| %s" $element.updatedAt) (printf "| [%s#%.f](%s)" $element.repository.nameWithOwner $element.number $element.url) "|" -}}
+{{- tablerow (printf "| %s" $element.title) (printf "| %s" $element.state) (printf "| %s" $element.updatedAt) (printf "| [%s#%.f](%s)" $element.repository.nameWithOwner $element.number $element.url) "|" -}}
 {{- end -}}{{ tablerender }}
 */ -}}
