--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
       - uses: actions/checkout@v3
       - run: make install
       - name: Test
-        run: ./.github/script/opt-test.sh
+        run: ./.github/scripts/opt-test.sh
