--- a/.github/workflows/issue_metrics.yml
+++ b/.github/workflows/issue_metrics.yml
@@ -6,6 +6,11 @@ on:
   schedule:
     - cron: '3 2 1 * *'
 
+permissions:
+  checks: write
+  contents: read
+  issues: write
+
 jobs:
   build:
     name: issue metrics
