--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,6 @@ jobs:
       - uses: actions/checkout@v3
       - run: make install
       - name: Test
+        env:
+          TEST_SLEEP: 15
         run: ./.github/scripts/opt-test.sh
