--- a/format/lens-with-body.template
+++ b/format/lens-with-body.template
@@ -3,7 +3,7 @@
 {{ range $index, $element := . -}}
 -------------------------------------------------------------------------------
 
-## [\[{{ $element.repository.nameWithOwner }}\]: {{ $element.number }} - {{ $element.title }}]({{ $element.url }})
+## [{{ $element.repository.nameWithOwner }}]: {{ $element.number }} - {{ $element.title }}
 
 repository: {{ $element.repository.nameWithOwner }}
 number: {{ $element.number }}
@@ -14,11 +14,11 @@ updatedAt: {{ $element.updatedAt }}
 closedAt: {{ $element.closedAt }}
 state: {{ $element.state }}
 url: {{ $element.url }}
-
+{{ if $element.body }}
 body:
 
-```
+```text
 {{ $element.body }}
 ```
-
+{{ end }}
 {{ end }}
