fix unbound variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,4 +49,4 @@ jobs:
           persist-credentials: false
       - name: Run ubuntu 16.04
         run: |
-          docker run --rm -v $(pwd):/work -w /work ubuntu:16.04 ./.github/scripts/syntax-check.sh
+          docker run --rm -v "$(pwd):/work" -w /work ubuntu:16.04 ./.github/scripts/syntax-check.sh
