--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,6 +47,6 @@ jobs:
       - uses: actions/checkout@v5
         with:
           persist-credentials: false
-      - name: Run ubuntu 16.04
+      - name: ubuntu 16.04 bash test
         run: |
           docker run --rm -v "$(pwd):/work" -w /work ubuntu:16.04 ./.github/scripts/syntax-check.sh
