--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
           persist-credentials: false
       - run: make install
       - name: Test
-        uses: srz-zumix/retry-run-action@v1
+        uses: srz-zumix/retry-run-action@16c9a9c7334306ea6427d86b232c15b01e02f921 # v1.0.0
         env:
           TEST_SLEEP: 15
         with:
