--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,41 @@ env:
 permissions: read-all
 
 jobs:
+  prepare:
+    runs-on: ubuntu-slim
+    outputs:
+      src: ${{ steps.changes.outputs.gh }}
+      actor: ${{ steps.actor.outputs.actor }}
+    steps:
+      - name: $github
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "${GITHUB_CONTEXT}"
+      - uses: dorny/paths-filter@v3
+        id: changes
+        with:
+          filters: |
+            src:
+              - .github/workflows/main.yml
+              - gh-activity-report
+      - name: Check Actor
+        id: actor
+        run: |
+          if [ "${GITHUB_ACTOR}" == "Copilot" ]; then
+            echo "actor=false" >> "${GITHUB_OUTPUT}"
+            exit 0
+          fi
+          if [ "${GITHUB_ACTOR}" == "dependabot[bot]" ]; then
+            echo "actor=false" >> "${GITHUB_OUTPUT}"
+            exit 0
+          fi
+          echo "actor=true" >> "${GITHUB_OUTPUT}"
+
   test:
     runs-on: ubuntu-latest
+    needs: prepare
+    if: needs.prepare.outputs.src && needs.prepare.outputs.actor
     steps:
       - uses: actions/checkout@v6
         with:
@@ -26,7 +59,8 @@ jobs:
 
   option-test:
     runs-on: ubuntu-latest
-    if: ${{ github.actor != 'dependabot[bot]' }}
+    needs: prepare
+    if: needs.prepare.outputs.src && needs.prepare.outputs.actor
     steps:
       - uses: actions/checkout@v6
         with:
@@ -43,6 +77,7 @@ jobs:
 
   old-bash-test:
     runs-on: ubuntu-latest
+    needs: prepare
     steps:
       - uses: actions/checkout@v6
         with:
@@ -50,3 +85,13 @@ jobs:
       - name: ubuntu 16.04 bash test
         run: |
           docker run --rm -v "$(pwd):/work" -w /work ubuntu:16.04 ./.github/scripts/syntax-check.sh
+
+  status-check:
+    needs:
+      - test
+      - option-test
+      - old-bash-test
+    runs-on: ubuntu-slim
+    if: cancelled() || failure()
+    steps:
+      - run: exit 1
