--- a/aqua.yaml
+++ b/aqua.yaml
@@ -8,13 +8,13 @@
 #   supported_envs:
 #   - all
 registries:
-- type: standard
-  ref: v4.464.0 # renovate: depName=aquaproj/aqua-registry
+  - type: standard
+    ref: v4.471.0 # renovate: depName=aquaproj/aqua-registry
 packages:
-- name: suzuki-shunsuke/pinact@v3.8.0
-  tags:
-    - dev
-- name: crates.io/zizmor@1.22.0
-  tags:
-    - dev
-    - ci
+  - name: suzuki-shunsuke/pinact@v3.9.0
+    tags:
+      - dev
+  - name: zizmorcore/zizmor@v1.22.0
+    tags:
+      - dev
+      - ci
